Replace conditional compilation with magic.

--- a/Docs/DataPackage-Introduction.ipynb
+++ b/Docs/DataPackage-Introduction.ipynb
@@ -8,34 +8,12 @@
      "language": "csharp"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Installing package DataBoss.DataPackage, version 0.0.93..."
-     },
-     "output_type": "unknown"
-    },
-    {
-     "data": {
-      "text/plain": "Installing package DataBoss.Data, version 0.0.93..."
-     },
-     "output_type": "unknown"
-    },
-    {
-     "data": {
-      "application/x.notebook.error-traceback": {
-       "ename": "Error",
-       "evalue": "C:\\Users\\drunkcod\\AppData\\Local\\Temp\\nuget\\21936--ac062a0e-7144-4b62-a63a-27958fdb990e\\Project.fsproj : error NU1102: Unable to find package DataBoss.DataPackage with version (>= 0.0.93)\r\nC:\\Users\\drunkcod\\AppData\\Local\\Temp\\nuget\\21936--ac062a0e-7144-4b62-a63a-27958fdb990e\\Project.fsproj : error NU1102:   - Found 26 version(s) in nuget.org [ Nearest version: 0.0.92 ]\r\nC:\\Users\\drunkcod\\AppData\\Local\\Temp\\nuget\\21936--ac062a0e-7144-4b62-a63a-27958fdb990e\\Project.fsproj : error NU1102:   - Found 0 version(s) in Microsoft Visual Studio Offline Packages",
-       "traceback": []
-      }
-     },
-     "output_type": "unknown"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#r \"nuget:Newtonsoft.Json, 12.0.2\"\r\n",
+    "#r \"nuget:CsvHelper, 26.1.0\"\r\n",
     "#r \"nuget:DataBoss.DataPackage, 0.0.93\"\r\n",
-    "#r \"nuget:DataBoss.Data, 0.0.93\"\r\n",
-    "//standard includes\r\n",
+    "\r\n",
     "using DataBoss.Data;\r\n",
     "using DataBoss.DataPackage;"
    ]
@@ -44,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_visualization functions, you can safely skip this cell_"
+    "_visualization functions, you can safely skip the following cell_"
    ]
   },
   {
