🐛 DataReaderTransform SourceFieldAccessor nullability causes StackOverflowException

--- a/Docs/DataPackage-Introduction.ipynb
+++ b/Docs/DataPackage-Introduction.ipynb
@@ -8,7 +8,26 @@
      "language": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Installed package DataBoss.DataPackage version 0.0.93"
+     },
+     "output_type": "unknown"
+    },
+    {
+     "data": {
+      "text/plain": "Installed package CsvHelper version 26.1.0"
+     },
+     "output_type": "unknown"
+    },
+    {
+     "data": {
+      "text/plain": "Installed package Newtonsoft.Json version 12.0.2"
+     },
+     "output_type": "unknown"
+    }
+   ],
    "source": [
     "#r \"nuget:Newtonsoft.Json, 12.0.2\"\r\n",
     "#r \"nuget:CsvHelper, 26.1.0\"\r\n",
@@ -68,7 +87,7 @@
     "    } finally {\r\n",
     "        xs.Dispose();\r\n",
     "    } \r\n",
-    "}\r\n"
+    "}"
    ]
   },
   {
@@ -205,18 +224,6 @@
       "text/html": "<table><thead><th>numbers</th></thead><tbody><td><table><thead><th style=\"font-weight:bold\">Value</th></thead><tbody><tr><td><div class=\"dni-plaintext\">1</div></td></tr><tr><td><div class=\"dni-plaintext\">2</div></td></tr><tr><td><div class=\"dni-plaintext\">3</div></td></tr></tbody></table></td></tbody></table>"
      },
      "output_type": "unknown"
-    },
-    {
-     "data": {
-      "text/plain": "---[ Update ]---\r\n"
-     },
-     "output_type": "unknown"
-    },
-    {
-     "data": {
-      "text/html": "<table><thead><th>numbers</th></thead><tbody><td><table><thead><th style=\"font-weight:bold\">Value</th></thead><tbody><tr><td><div class=\"dni-plaintext\">1</div></td></tr><tr><td><div class=\"dni-plaintext\">2</div></td></tr><tr><td><div class=\"dni-plaintext\">3</div></td></tr><tr><td><div class=\"dni-plaintext\">4</div></td></tr><tr><td><div class=\"dni-plaintext\">5</div></td></tr><tr><td><div class=\"dni-plaintext\">6</div></td></tr></tbody></table></td></tbody></table>"
-     },
-     "output_type": "unknown"
     }
    ],
    "source": [
@@ -229,10 +236,28 @@
     "}\r\n",
     "\r\n",
     "AddOrAppend(myNumbers, \"numbers\", numbers.ToList());\r\n",
-    "Dump(myNumbers);\r\n",
-    "Console.WriteLine(\"---[ Update ]---\");\r\n",
+    "Dump(myNumbers);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<table><thead><th>numbers</th></thead><tbody><td><table><thead><th style=\"font-weight:bold\">Value</th></thead><tbody><tr><td><div class=\"dni-plaintext\">1</div></td></tr><tr><td><div class=\"dni-plaintext\">2</div></td></tr><tr><td><div class=\"dni-plaintext\">3</div></td></tr><tr><td><div class=\"dni-plaintext\">4</div></td></tr><tr><td><div class=\"dni-plaintext\">5</div></td></tr><tr><td><div class=\"dni-plaintext\">6</div></td></tr></tbody></table></td></tbody></table>"
+     },
+     "output_type": "unknown"
+    }
+   ],
+   "source": [
     "AddOrAppend(myNumbers, \"numbers\", numbers.ToList());\r\n",
-    "Dump(myNumbers);\r\n"
+    "Dump(myNumbers);"
    ]
   }
  ],
